<resources>
    <string name="app_name">calculator</string>
    <string name="calculator_default_text">000</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="op_plus">+</string>op_clear
    <string name="op_minus">-</string>
    <string name="op_divide">÷</string>
    <string name="op_multiply">x</string>
    <string name="op_equals">=</string>
    <string name="op_clear">C</string>
</resources>